# chat_django_react

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  setup.cfg
application/api/v1/: urls.py
application/api/v1/chat/: serializers.py  views.py
application/chat/: forms.py  models.py  routing.py  urls.py  views.py
application/chat/migrations/: 0002_initial.py
application/config/: urls.py
application/config/settings/: __init__.py  auth.py  base.py  cache.py  logging.py
application/fixtures/: chats.json  users.json
application/frontend/: webpack.config.js
application/frontend/src/: hooks.js
application/frontend/src/axios/: axios_config.js
application/templates/: base.html
application/templates/auth/: login.html
application/templates/chat/: create_chat.html  room_chat.html
application/users/: models.py  urls.py  views.py
application/users/migrations/: 0001_initial.py
backend/: Dockerfile  docker-entrypoint-django.sh  manage.py  pyproject.toml
backend/api/v1/users/: permissions.py  serializers.py  views.py
backend/chat/: consumers.py
backend/chat/migrations/: 0001_initial.py
backend/config/: asgi.py
backend/config/settings/: base.py  channels.py
backend/core/: models.py
backend/static/: fonts.css  reset.css
backend/templates/auth/: logout.html
environment/: .docker.env  .env.example
frontend/: Dockerfile  package.json
frontend/src/axios/: axios_config.js
frontend/src/components/: csrf_token_input.jsx  logout_icon.jsx
frontend/src/components/styles/: loader.scss  (+1 more)
frontend/src/stylesheet/: liabrary.scss
(+29 files in other folders)
